--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
     <section class="main">
         <div class="container tutorial">
-            <h1>Test Title</h1>
+            <h1>ПРИВЕТИЩЕ</h1>
             <p>Tutorial #1: <a href="/bluecard/index.html">BLUE CARD EU</a>;</p>
             <p>More tutorials coming soon:
                 <a href="/coming.html">Study in Germany</a> and <a href="/coming.html">Jobseeker Visa</a></p>
